# flutter-copier

./: .gitignore  README.md  pyproject.toml
src/flutter_copier/: cli.py  core.py
